--- a/HW5/hw5.ipynb
+++ b/HW5/hw5.ipynb
@@ -13,22 +13,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "id": "ef05eb26",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Q2: MEI & MHI (minimal)\n",
+    "# Q2: MEI & MHI\n",
     "import os, glob\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "from PIL import Image\n",
     "\n",
-    "# ---- paths/params (edit to your data) ----\n",
-    "DATA_DIR = \"data/\"     # folder with aerobic-001.bmp ... aerobic-022.bmp\n",
+    "DATA_DIR = \"data/\"     \n",
     "PATTERN  = \"aerobic-*.bmp\"\n",
     "\n",
-    "# Motion mask params (same as Q1 so results are consistent)\n",
+    "# Motion mask params (same as Q1)\n",
     "T        = 0.05               # fixed threshold in [0,1]\n",
     "MED_K    = 3                  # median filter window (odd)\n",
     "MIN_SIZE = 20                 # min component size (px)\n",
@@ -143,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "id": "fba33fe8",
    "metadata": {},
    "outputs": [
@@ -207,7 +206,7 @@
     "    mask = remove_small_regions(mask, min_size=MIN_SIZE)\n",
     "    results.append((i, mask))\n",
     "\n",
-    "# 3) Quick visual check on a few indices (edit list as desired)\n",
+    "# 3) Quick visual check on a few indices\n",
     "sample_is = [2, 10, 20] if len(frames) > 20 else [min(2, len(frames)-1)]\n",
     "for i in sample_is:\n",
     "    diff = np.abs(frames[i] - frames[i-1])\n",
@@ -223,15 +222,31 @@
   },
   {
    "cell_type": "markdown",
+   "id": "767bbe60",
+   "metadata": {},
+   "source": [
+    "**Discussion :** Absolute frame differencing with a fixed threshold reliably highlights the moving subject, and a small median filter plus removing tiny 8-connected components cleans speckle while preserving the silhouette."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "2ca82117",
    "metadata": {},
    "source": [
-    "**Problem 2 :**"
+    "**Problem 2 :** Compute an MEI and MHI on the image sequence (using your best motion differencing\n",
+    "approach from problem #1 above for each image pair i and i-1), simulating the current\n",
+    "MHI “timestamp” for each image pair using the larger of the image pair index values\n",
+    "(i.e., use i, not i-1). Therefore, you will have difference images from i=2 to 22. The\n",
+    "MEI/MHI duration should include all image diff results in the sequence into the final\n",
+    "template. Use imagesc (Matlab) to show your results. Compute the 7 similitude\n",
+    "moments for the final MEI and the MHI (make sure to normalize the MEI and MHI\n",
+    "values to be between 0-1 before computing the moments using the given formula in the\n",
+    "class notes: max[0, (i-1.0)/21.0] for this example). [4 pts]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "id": "68a6ac03",
    "metadata": {},
    "outputs": [
@@ -269,12 +284,12 @@
     }
    ],
    "source": [
-    "# 1) Load frames (same set as Q1)\n",
+    "# 1) Load frames\n",
     "frames, fpaths = load_sequence()\n",
     "H, W = frames[0].shape\n",
     "print(f\"Loaded {len(frames)} frames; computing masks & MEI/MHI...\")\n",
     "\n",
-    "# 2) Build motion masks exactly as in Q1\n",
+    "# 2) Build motion masks\n",
     "masks = []  # list of binary masks for i=1..N-1 but we'll index by actual i (2..N)\n",
     "for i in range(1, len(frames)):\n",
     "    diff = np.abs(frames[i] - frames[i-1])\n",
@@ -292,11 +307,11 @@
     "# 4) Compute MHI with decay + timestamp overwrite (normalized 0..1)\n",
     "#    i runs 2..22 -> normalized timestamp ts = (i-1)/21 ∈ (1/21 .. 1]\n",
     "MHI = np.zeros((H, W), np.float32)\n",
-    "for k, m in enumerate(masks, start=2):     # k corresponds to \"i\" in the prompt\n",
+    "for k, m in enumerate(masks, start=2):     \n",
     "    # decay older motion everywhere\n",
     "    MHI = np.maximum(0.0, MHI - DELTA)\n",
     "    # stamp current motion with normalized timestamp\n",
-    "    ts = max(0.0, (k - 1.0) / TAU)         # example: max[0, (i-1)/21]\n",
+    "    ts = max(0.0, (k - 1.0) / TAU)         \n",
     "    MHI[m.astype(bool)] = ts\n",
     "\n",
     "# 5) Moments on MEI & MHI (ensure MHI in [0,1] already)\n",
@@ -323,10 +338,26 @@
   },
   {
    "cell_type": "markdown",
+   "id": "10d2fc41",
+   "metadata": {},
+   "source": [
+    "**Discussion :** The MEI accumulates where motion occurred, while the normalized MHI (0–1) encodes when it happened, so their Hu moments emphasize overall action shape versus its recency-weighted sweep."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "e9cdc87b",
    "metadata": {},
    "source": [
-    "**Problem 3 :**"
+    "**Problem 3 :** Create a 101x101 image with a black (0) background and a white (255) box of size\n",
+    "21x21, placing the upper-left corner at pixel (row=40, col=6). Create another new box\n",
+    "image, but shift the box 1-pixel to the right and 1-pixel down. Compute the normal\n",
+    "flow between the images. Use MATLAB’s quiver function to draw the motion\n",
+    "vectors on the image (call imagesc, then ‘hold on’, and lastly call quiver). (Make sure\n",
+    "your gradient mask orientations/directions and the plot axes are consistent!!!) Make\n",
+    "sure all masks are “correct” with proper scaling/normalization. Is the result what you\n",
+    "expected? Why or why not? Comment on the flow for the 4 sides of the box and also\n",
+    "for the 4 corners. [5 pts]"
    ]
   },
   {
@@ -417,6 +448,14 @@
     "\n",
     "plt.tight_layout()\n",
     "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a20d9ce7",
+   "metadata": {},
+   "source": [
+    "**Discussion :** Yes. Normal flow only picks up motion straight out from edges, so arrows go sideways on vertical edges and up/down on horizontal edges; corners look messy/weak, and inside the box there are no arrows because there’s no texture to measure."
    ]
   }
  ],
